--- a/styles.css
+++ b/styles.css
@@ -158,8 +158,34 @@ h1{
     margin-top: auto;
 }
 
+/* ------------------------------------ Contactanos-Form ------------------------------------*/
 #form{
-    height: 60vh;
+    padding-top: 100px;
+    margin-bottom: 30px;
+}
+
+#btn{
+    width: 100%;
+    justify-content: center;
+}
+
+.enviar{
+    background-color: #41099D;
+    color: white;
+    border-radius: 10px;
+    width: 100px;
+    height: 60px;
+    justify-content: center;
+}
+
+.enviar:hover{
+    background-color: white;
+    color: black;
+    border-width: 5px;
+    border-radius: 10px;
+    border-color: #41099D;
+    width: 100px;
+    height: 60px;
 }
 
 /* ------------------------------------ Media Querys ------------------------------------*/
@@ -172,6 +198,7 @@ h1{
         height: 400px;
         margin-left: 100px;
     }
+
 }
 
 @media (max-width: 991px){
