--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,14 +1,12 @@
-@import "./partials/header", "./partials/hero", "./partials/section1", "./partials/section2", "./partials/footer", "./partials/contacto.scss", "./partials/branding", "./partials/querys" ;
+@import "./partials/header", "./partials/hero", "./partials/section1", "./partials/section2", "./partials/footer", "./partials/contacto.scss", "./partials/branding", "./partials/querys", "./partials/nosotros", "./partials/servicios" ;
 
 body{
     font-family: 'Roboto', sans-serif;
     position: flex;
     flex-direction: column;
     min-height: 100vh;
-}
-
-body {
     a{
         text-decoration: none;
     }
 }
+
