--- a/styles/partials/_contacto.scss
+++ b/styles/partials/_contacto.scss
@@ -1,27 +1,43 @@
+#contacto{
+ background-image:     linear-gradient(0deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+ url("https://wallpaper.dog/large/10757.jpg");
+ background-size: cover;
+ background-position: center center;
+}
+
+
 #form{
     padding-top: 100px;
-    margin-bottom: 30px;
+    color: aliceblue;
 }
 
 #btn{
     width: 100%;
     justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
 
-.enviar{
+.enviar {
     background-color: #41099D;
     color: white;
     border-radius: 10px;
     width: 100px;
     height: 60px;
     justify-content: center;
-    .enviar:hover{
-        background-color: white;
-        color: black;
-        border-width: 5px;
-        border-radius: 10px;
-        border-color: #41099D;
-        width: 100px;
-        height: 60px;
-    }
 }
+
+.enviar:hover{
+    background-color: white;
+    color: black;
+    border-width: 5px;
+    border-radius: 10px;
+    border-color: #41099D;
+    width: 100px;
+    height: 60px;
+}
+
+.footer{
+    background-color: transparent !important;
+}
+
