--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,8 +33,7 @@
   background-position: center center;
   font-weight: bold;
 }
-
-h1 {
+#hero h1 {
   font-size: 90px;
 }
 
@@ -91,7 +90,6 @@ h1 {
   height: 45vh;
   color: white;
 }
-
 #footer ul {
   padding: 0;
 }
@@ -128,14 +126,22 @@ h1 {
   margin-top: auto;
 }
 
+#contacto {
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("https://wallpaper.dog/large/10757.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+
 #form {
   padding-top: 100px;
-  margin-bottom: 30px;
+  color: aliceblue;
 }
 
 #btn {
   width: 100%;
   justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 .enviar {
@@ -146,7 +152,8 @@ h1 {
   height: 60px;
   justify-content: center;
 }
-.enviar .enviar:hover {
+
+.enviar:hover {
   background-color: white;
   color: black;
   border-width: 5px;
@@ -154,6 +161,10 @@ h1 {
   border-color: #41099D;
   width: 100px;
   height: 60px;
+}
+
+.footer {
+  background-color: transparent !important;
 }
 
 #branding1 {
@@ -191,6 +202,14 @@ h1 {
     height: 350px;
     margin-left: 100px;
   }
+  .nosotros {
+    flex-direction: column;
+    padding-bottom: 30px;
+  }
+  .nosotros .aboutus__text {
+    font-size: 0.8em;
+    width: 100%;
+  }
 }
 @media (max-width: 902px) {
   #section1__texto {
@@ -216,6 +235,12 @@ h1 {
   #branding2 img {
     height: 300px;
     width: auto;
+  }
+  .nosotros img {
+    width: 300px !important;
+  }
+  .nosotros .aboutus__text {
+    width: 300px !important;
   }
 }
 @media (max-width: 748px) {
@@ -315,13 +340,38 @@ h1 {
     font-size: calc(1em + 1vw);
   }
 }
+.nosotros {
+  padding-top: 100px;
+  align-items: center;
+}
+.nosotros .aboutus__text {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+
+.servicios {
+  padding-top: 100px;
+  padding-bottom: 60px;
+}
+.servicios img {
+  height: 400px;
+  width: 100%;
+  opacity: 30%;
+}
+.servicios .card-text {
+  padding-top: 70px;
+}
+.servicios .card:hover {
+  width: 110%;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   position: flex;
   flex-direction: column;
   min-height: 100vh;
 }
-
 body a {
   text-decoration: none;
 }/*# sourceMappingURL=styles.css.map */
